objects/EUR_CRM_Sales_Order__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>Customer_Tax_Number__c</fullName>
        <description>Customer Tax Number is made of 2 letters and 9 digits, 11 symbols in total
(https://basecamp.com/2036369/projects/10425694/todos/247836185)</description>
        <label>Customer Tax Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Sales_Orders_Account_Account_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_VAT_Number__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_VAT_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Account)</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_CISLink_Distributor__c</fullName>
        <formula>HYPERLINK( EUR_CRM_CIS_Link__r.EUR_CRM_Distributor_Account__r.Id , EUR_CRM_CIS_Link__r.EUR_CRM_Distributor_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CISLink Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CIS_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CISLink (EU)</label>
        <referenceTo>EUR_CRM_CISLink__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (CIS Link)</relationshipLabel>
        <relationshipName>Sales_Orders_CIS_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Channel__c</fullName>
        <formula>TEXT(EUR_CRM_Account__r.EUR_CRM_Channel__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_City__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Collection_Point__c</fullName>
        <label>Collection Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bloemfontein</fullName>
                </value>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
                <value>
                    <fullName>Eastern Cape</fullName>
                </value>
                <value>
                    <fullName>Gauteng</fullName>
                </value>
                <value>
                    <fullName>KZN</fullName>
                </value>
                <value>
                    <fullName>Limpopo</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Nelspruit</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Port Elizabeth</fullName>
                </value>
                <value>
                    <fullName>Southern Cape</fullName>
                </value>
                <value>
                    <fullName>Transkei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a new field created for PR BG.</description>
        <label>Contract Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Related_formula__c</fullName>
        <formula>if(EUR_CRM_Contract_Related__c=true,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Related</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cost_Center_Code__c</fullName>
        <description>This is a newly created field for BG. 
Depending on the Cost Center, approval workflow will be triggered.</description>
        <label>Cost Center Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Cost_Center_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>BR11</fullName>
                </value>
                <value>
                    <fullName>BR12A</fullName>
                </value>
                <value>
                    <fullName>BR12B</fullName>
                </value>
                <value>
                    <fullName>BR12C</fullName>
                </value>
                <value>
                    <fullName>BR12D</fullName>
                </value>
                <value>
                    <fullName>BR14A</fullName>
                </value>
                <value>
                    <fullName>BR14D</fullName>
                </value>
                <value>
                    <fullName>BR15</fullName>
                </value>
                <value>
                    <fullName>BR16</fullName>
                </value>
                <value>
                    <fullName>BR1A</fullName>
                </value>
                <value>
                    <fullName>BR1B</fullName>
                </value>
                <value>
                    <fullName>BR2A</fullName>
                </value>
                <value>
                    <fullName>BR2B</fullName>
                </value>
                <value>
                    <fullName>BR3A</fullName>
                </value>
                <value>
                    <fullName>BR3B</fullName>
                </value>
                <value>
                    <fullName>BR3C</fullName>
                </value>
                <value>
                    <fullName>BR3E</fullName>
                </value>
                <value>
                    <fullName>BR5</fullName>
                </value>
                <value>
                    <fullName>BR6A</fullName>
                </value>
                <value>
                    <fullName>BR6B</fullName>
                </value>
                <value>
                    <fullName>BR7</fullName>
                </value>
                <value>
                    <fullName>BR8A</fullName>
                </value>
                <value>
                    <fullName>BR9</fullName>
                </value>
                <value>
                    <fullName>CA1A</fullName>
                </value>
                <value>
                    <fullName>CA1B</fullName>
                </value>
                <value>
                    <fullName>CA1C</fullName>
                </value>
                <value>
                    <fullName>CA1D</fullName>
                </value>
                <value>
                    <fullName>CA1E</fullName>
                </value>
                <value>
                    <fullName>CA1F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cost_Center_Type__c</fullName>
        <label>Cost Center Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT( RecordType.DeveloperName , 6) , 2)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Created_By_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Created By (Name)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Created_By_Role__c</fullName>
        <description>This is a field to displayed the Sales Order&apos;s Creator&apos;s Role</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By (Role)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_No_ERP__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No_ERP__c</formula>
        <label>Customer No. (ERP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Nr_Salesforce__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No__c</formula>
        <label>Customer Nr. (Salesforce)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Ship_To_No_ERP__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_Ship_To_No_ERP__c</formula>
        <label>Customer Ship To No. (ERP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_City__c</fullName>
        <label>Delivery City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Contact__c</fullName>
        <label>Delivery Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Method__c</fullName>
        <description>This is a new field created for PR BG.</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR Warehouse</fullName>
                </value>
                <value>
                    <fullName>WHS Warehouse</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Postal_Code__c</fullName>
        <label>Delivery Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Street__c</fullName>
        <label>Delivery Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Time_Range__c</fullName>
        <description>PT is the first country to use this field.</description>
        <label>Delivery Time Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8am to 10am</fullName>
                </value>
                <value>
                    <fullName>10am to 12pm</fullName>
                </value>
                <value>
                    <fullName>12pm to 2pm</fullName>
                </value>
                <value>
                    <fullName>2pm to 4pm</fullName>
                </value>
                <value>
                    <fullName>4pm to 6pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distributor_Email__c</fullName>
        <label>Distributor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Distributor)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Email__c</fullName>
        <description>This field has been created first to answer the DK requirement to be able to send a direct sales order email notification to any email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Endpoint_Response_Message__c</fullName>
        <label>Endpoint Response Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Endpoint_Sync_Status__c</fullName>
        <label>Endpoint Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Discounted_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Discounted Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_POSM_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has POSM Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Internal_Order_Nr_Customer__c</fullName>
        <label>Internal Order Nr. Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Invoicing_Method__c</fullName>
        <description>This is a new field created for PR BG.</description>
        <label>Invoicing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super discount</fullName>
                </value>
                <value>
                    <fullName>Counter-invoice</fullName>
                </value>
                <value>
                    <fullName>Protocol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_KD_CS_Email__c</fullName>
        <label>KD CS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Distributor_Sales_Rep_Email__c</fullName>
        <label>Key Distributor Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Distributor_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Distributor Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_User_Key_Distributor_SR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_User_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Order_Items_Match_Header__c</fullName>
        <formula>IF(EUR_CRM_No_of_Sales_Order_Items__c =  EUR_CRM_Total_Sales_Order_Item__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Order Items Match Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Sales_Order_Items__c</fullName>
        <description>Field that mobile app needs to populate - contains the total number of Sales Order Item records to be synced to SFDC - Webservice will query the Sales Order Item table until the number of records in SFDC is equal to the value of this field, before executing the Web Service Call Out</description>
        <label>No. of Sales Order Items</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Nr_JDE__c</fullName>
        <label>Order Nr. JDE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Partially processed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Settlement_Clerk__c</fullName>
        <label>Parent -&gt; Settlement Clerk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBZ</fullName>
                </value>
                <value>
                    <fullName>EDEKA</fullName>
                </value>
                <value>
                    <fullName>GES</fullName>
                </value>
                <value>
                    <fullName>GEVA</fullName>
                </value>
                <value>
                    <fullName>MARKANT</fullName>
                </value>
                <value>
                    <fullName>METRO</fullName>
                </value>
                <value>
                    <fullName>REWE</fullName>
                </value>
                <value>
                    <fullName>Selbstabrechner</fullName>
                </value>
                <value>
                    <fullName>Lager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>At delivery</fullName>
                </value>
                <value>
                    <fullName>End of month + 30</fullName>
                </value>
                <value>
                    <fullName>End of month + 60</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 30</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 45</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 60</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 90</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Post_code__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Postal_Code__c</formula>
        <label>Postal code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Preferred_Delivery_Day__c</fullName>
        <label>Preferred Delivery Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Prepayment__c</fullName>
        <label>Prepayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price_List__c</fullName>
        <label>Price List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Recipient__c</fullName>
        <label>Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Street__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sum_of_AAV__c</fullName>
        <description>This is the Sum of AAV used in PR CH to determine the approval process.</description>
        <label>Sum of AAV</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_AAV__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Summary_Total__c</fullName>
        <label>Summary Total</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Item_Total__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Summary_Total_incl_VAT__c</fullName>
        <formula>IF( EUR_CRM_Country_Code__c = &quot;MA&quot; ,  EUR_CRM_Summary_Total__c * 1.2,  EUR_CRM_Summary_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Total (incl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TeleSales_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeleSales Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Telephone__c</fullName>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Sales_Order_Item__c</fullName>
        <label>Total Sales Order Item</label>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Value_of_Order__c</fullName>
        <label>Total Value of Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Volume__c</fullName>
        <label>Total Volume</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Quantity__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Wholesaler Contact)</relationshipLabel>
        <relationshipName>Sales_Orders_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler_Email__c</fullName>
        <description>It is to populate Wholesaler Email for PR BG.</description>
        <label>Wholesaler Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order (EU)</label>
    <listViews>
        <fullName>ALL_DK_Direct_Sales_Orders</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_DK_Direct_Sales_Order</value>
        </filters>
        <label>ALL DK Direct Sales Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_DK_Free_Goods_Order_from_SR_Stock</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_DK_Free_Goods_Order_from_SR_Stock</value>
        </filters>
        <label>ALL DK Free Goods Order from SR Stock</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_DK_Free_Goods_Order_to_Customer</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_DK_Free_Goods_Order_to_Customer</value>
        </filters>
        <label>ALL DK Free Goods Order to Customer</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_DK_Reminders</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_DK_Reminder</value>
        </filters>
        <label>ALL DK Reminders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AO_SO</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>EUR_CRM_Approval_Status__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Delivery_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_AO_Direct_Sales_Order,EUR_CRM_Sales_Order__c.EUR_AO_Indirect_Sales_Order</value>
        </filters>
        <label>AO SO</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_EUR_CH_Sales_Orders</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>EUR_CRM_Approval_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_CH_Direct_Sales_Order,EUR_CRM_Sales_Order__c.EUR_CH_Indirect_Sales_Order,EUR_CRM_Sales_Order__c.EUR_CH_Reminder</value>
        </filters>
        <label>All EUR CH Sales Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_EUR_NG_Sales_Orders</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>EUR_CRM_Delivery_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_NG_On_Trade_Reminder,EUR_CRM_Sales_Order__c.EUR_NG_On_Trade_Sales_Order</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_NG_Off_Trade_Traditional_Sales_Order</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_NG_Off_Trade_Modern_Sales_Order</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order__c.EUR_NG_Off_Trade_Bulk_Breaker_Sales_Order</value>
        </filters>
        <label>All EUR NG Sales Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>